# PocketDruggability

./: LICENSE  README.md  features_calculator.py  pyproject.toml  test.py
PocketDruggability/: calculators.py  cmds.py  utils.py
PocketDruggability/models/: regressor.json
src/PocketDruggability/: calculators.py  cmds.py  utils.py
tests/Reports/: Features_PV-001797102843_6.rpt  Features_mdm2_2.rpt
tests/TA99/Reports/: Features_TA99_PV-001797102843_6.rpt
